@@ -17,6 +17,7 @@
 
 ~>XX.07.2012:
 
+- Fix Glyph of Totem of Wrath.
 - Fix Grounding Totem.
 
 ~>17.07.2012:
